--- a/coopetition_mturk/templates/coopetition_mturk0/WaitingInfo.html
+++ b/coopetition_mturk/templates/coopetition_mturk0/WaitingInfo.html
@@ -26,8 +26,6 @@
 <p style="font-size:16px">
 While you are waiting, below is some information about the experiment that you can review, and you can think about how you
     will make decisions.
-
-    在等待时，下面是有关本实验的一些信息供你参考。同时，你也可以思考你随后的决策策略。
 </p>
 
 {% if player.condition == "Asm" %}
@@ -36,18 +34,14 @@ While you are waiting, below is some information about the experiment that you c
     <ul>
         <li>
             After you are matched with another participant, your role as Player A or Player B will be randomly determined.
-            当你和对方配对后，你的角色（"玩家A"或者"玩家B"）就会被随机决定。
         </li>
         <li> If you are Player A, you will receive 20 points in each round.
-            当你是“玩家A”时，你每轮起始获得20份资源。
         </li>
         <li>
             If you are Player B, you will receive 10 points in each round.
-            当你是“玩家B”时，你每轮起始获得10份资源。
         </li>
     <li>
        You need to decide how to allocate the points you received.
-        当你与“对方”进行互动决策时，你将看到如下界面供你填写你的决策。
     </li>
     </ul>
 </p>
@@ -56,7 +50,6 @@ While you are waiting, below is some information about the experiment that you c
 <p>
     During your interaction with the other participant, the following experimental interface will be
     shown for you to submit your decisions.
-    注意：实验的进程取决于决策较慢的玩家，因此，请尽快填写并提交你的决定。在前五期中，你各有1分钟来做出你的决定。五期过后，每期你将有30秒做出你的决定。如果未能在指定时间内填写并提交你的决定，电脑将随机为你填写，你也无法获得当期的收益。如果你多次未能提交你的决定，你将无法获得整个实验的收益。
 </p>
 
 <p style="text-align: center">
@@ -73,9 +66,7 @@ While you are waiting, below is some information about the experiment that you c
 </p>
 <p style="text-align:center">
     <strong>Remember to submit once you reach your decision.
-        Your decision is submitted only after you click "Submit".
-    决定填写完毕后，请务必点击“提交”，否则实验无法继续。
-    </strong>
+        Your decision is submitted only after you click "Submit".</strong>
 </p>
 
 
