--- a/coopetition_mturk/templates/coopetition_mturk/DecisionWaitPage.html
+++ b/coopetition_mturk/templates/coopetition_mturk/DecisionWaitPage.html
@@ -1,72 +1,64 @@
-{% extends 'otree/WaitPage.html' %}
-{% load staticfiles otree %}
-{% block title %} {% endblock %}
-
-{% block content %}
-<style>
-    #width50 {
-        width: 50%;
-    }
-
-    td {
-        border: 1px solid #ddd;
-        text-align: center;
-        padding: 8px;
-        font-size: 10pt;
-    }
-    th {
-        border: 1px solid #ddd;
-        text-align: center;
-        padding: 5px;
-        font-size: 10pt;
-    }
-    tr:nth-child(even){background-color: #f2f2f2;}
-    tr:hover {background-color: #ddd;}
-
-    table {
-        margin: auto;
-    }
-</style>
-
-<p style="font-size:16px">Round {{ player.round_in_interaction }} </p>
-
-<p style="text-align:center; font-size:18px">
-You have made the following allocation:
-</p>
-<table class="table" style="text-align:center">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Style-Type" content="text/css">
+  <title></title>
+  <meta name="Generator" content="Cocoa HTML Writer">
+  <meta name="CocoaVersion" content="1504.83">
+  <style type="text/css">
+    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p2 {margin: 0.0px 0.0px 16.0px 0.0px; line-height: 18.0px; font: 16.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p3 {margin: 0.0px 0.0px 18.0px 0.0px; text-align: center; line-height: 22.0px; font: 18.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p4 {margin: 0.0px 0.0px 18.0px 0.0px; text-align: center; line-height: 22.0px; font: 18.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000}
+    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 15.0px; font: 13.3px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p6 {margin: 0.0px 0.0px 16.0px 0.0px; text-align: center; line-height: 18.0px; font: 16.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p7 {margin: 0.0px 0.0px 16.0px 0.0px; text-align: center; line-height: 18.0px; font: 16.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000}
+    p.p8 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p9 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000; min-height: 14.0px}
+    span.s1 {font-kerning: none}
+    span.s2 {font: 16.0px 'Songti SC'; font-kerning: none}
+    span.s3 {font: 13.3px 'Songti SC'; font-kerning: none}
+    span.s4 {font: 13.3px Times; font-kerning: none}
+    table.t1 {margin: 0.0px 262.0px 0.0px 262.0px}
+    td.td1 {width: 238.0px; margin: 0.5px 0.5px 0.5px 0.5px; border-style: solid; border-width: 1.0px 1.0px 1.0px 1.0px; border-color: #dddddd #dddddd #dddddd #dddddd; padding: 8.0px 8.0px 8.0px 8.0px}
+    td.td2 {width: 238.0px; background-color: #f2f2f2; margin: 0.5px 0.5px 0.5px 0.5px; border-style: solid; border-width: 1.0px 1.0px 1.0px 1.0px; border-color: #dddddd #dddddd #dddddd #dddddd; padding: 8.0px 8.0px 8.0px 8.0px}
+  </style>
+</head>
+<body>
+<p class="p1"><span class="s1">{% extends 'otree/WaitPage.html' %} {% load staticfiles otree %} {% block title %} {% endblock %} {% block content %}</span></p>
+<p class="p2"><span class="s1">Round {{ player.round_in_interaction }}<span class="Apple-converted-space"> </span></span></p>
+<p class="p2"><span class="s2">第</span><span class="s1">{{ player.round_in_interaction }} </span><span class="s2">期</span></p>
+<p class="p3"><span class="s1">You have made the following allocation:<span class="Apple-converted-space"> </span></span></p>
+<p class="p4"><span class="s1">你已做出了如下决定：</span></p>
+<table cellspacing="0" cellpadding="0" class="t1">
+  <tbody>
     <tr>
-        <td>Investment Account (\(x_1\)): {{ player.a1 }}</td>
+      <td valign="middle" class="td1">
+        <p class="p5"><span class="s1">Investment Account (\(x_1\)): {{ player.a1 }}</span></p>
+        <p class="p5"><span class="s3">投资账户:</span><span class="s4"> (\(x_1\)): {{ player.a1 }}</span></p>
+      </td>
     </tr>
     <tr>
-        <td>Rationing Account  (\(y_1\)): {{ player.a2 }}</td>
+      <td valign="middle" class="td2">
+        <p class="p5"><span class="s1">Rationing Account (\(y_1\)): {{ player.a2 }}</span></p>
+        <p class="p5"><span class="s3">分配账户:</span><span class="s4"> (\(y_1\)): {{ player.a2 }}</span></p>
+      </td>
     </tr>
     <tr>
-        <td>Kept to oneself: {{ player.a3 }}</td>
+      <td valign="middle" class="td1">
+        <p class="p5"><span class="s1">Kept to oneself: {{ player.a3 }}</span></p>
+        <p class="p5"><span class="s3">个人留存: </span><span class="s4">{{ player.a3 }}</span></p>
+      </td>
     </tr>
+  </tbody>
 </table>
-
-<div style="font-size:16px;text-align:center">
-    <p>
-        Please wait for the other participant to reach decision.
-    </p>
-</div>
-
-    <p>
-       In the rare event that the experiment stays on this page for a long time (more than 2 minutes), the other participant may get disconnected.
-            In that case, you can submit the HIT using your MTurk worker ID and inform the requester by email.
-            What you have earned so far will be paid to you as bonus.
-    </p>
-
-<br/>
-{% include Constants.history_template %}
-
-<br/>
-<div class="card bg-light instructions">
-    <div class="card-body">
-        {% include Constants.instructions_template %}
-    </div>
-</div>
-
-<br/>
-{% include Constants.history_previous_template %}
-{% endblock %}
+<p class="p6"><span class="s1">Please wait for the other participant to reach decision.<span class="Apple-converted-space"> </span></span></p>
+<p class="p7"><span class="s1">请等待对方做出决定。</span></p>
+<p class="p8"><span class="s1">In the rare event that the experiment stays on this page for a long time (more than 2 minutes), the other participant may get disconnected. In that case, you can submit the HIT using your MTurk worker ID and inform the requester by email. What you have earned so far will be paid to you as bonus.<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1">{% include Constants.history_template %}<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1">{% include Constants.instructions_template %}<span class="Apple-converted-space"> </span></span></p>
+<p class="p9"><span class="s1"></span><br></p>
+<p class="p1"><span class="s1">{% include Constants.history_previous_template %} {% endblock %}</span></p>
+</body>
+</html>
