--- a/coopetition_mturk/templates/coopetition_mturk/HistoryAllRounds.html
+++ b/coopetition_mturk/templates/coopetition_mturk/HistoryAllRounds.html
@@ -1,55 +1,120 @@
-{% load otree staticfiles %}
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>MathJax example</title>
-    <script type="text/javascript" async
-            src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML" async>
-    </script>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Style-Type" content="text/css">
+  <title>MathJax example</title>
+  <meta name="Generator" content="Cocoa HTML Writer">
+  <meta name="CocoaVersion" content="1504.83">
+  <style type="text/css">
+    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 17.0px; font: 12.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000}
+    p.p6 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    span.s1 {font-kerning: none}
+    td.td1 {width: 131.1px; margin: 0.5px 0.5px 0.5px 0.5px; padding: 1.0px 1.0px 1.0px 1.0px}
+    td.td2 {width: 304.7px; margin: 0.5px 0.5px 0.5px 0.5px; padding: 1.0px 1.0px 1.0px 1.0px}
+    td.td3 {width: 334.4px; margin: 0.5px 0.5px 0.5px 0.5px; padding: 1.0px 1.0px 1.0px 1.0px}
+    td.td4 {width: 47.7px; margin: 0.5px 0.5px 0.5px 0.5px; padding: 1.0px 1.0px 1.0px 1.0px}
+    td.td5 {width: 63.9px; margin: 0.5px 0.5px 0.5px 0.5px; padding: 1.0px 1.0px 1.0px 1.0px}
+    td.td6 {width: 89.7px; margin: 0.5px 0.5px 0.5px 0.5px; padding: 1.0px 1.0px 1.0px 1.0px}
+    td.td7 {width: 77.3px; margin: 0.5px 0.5px 0.5px 0.5px; padding: 1.0px 1.0px 1.0px 1.0px}
+    td.td8 {width: 96.4px; margin: 0.5px 0.5px 0.5px 0.5px; padding: 1.0px 1.0px 1.0px 1.0px}
+  </style>
 </head>
-
-
-{% if player.round_number != 1 %}
-<h5 style="text-align:center">
-    History
-</h5>
-<table class="table" style="text-align:center">
+<body>
+<p class="p1"><span class="s1">{% load otree staticfiles %} {% if player.round_number != 1 %}</span></p>
+<h5 style="margin: 0.0px 0.0px 16.6px 0.0px; text-align: center; line-height: 13.0px; font: 10.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>History<span class="Apple-converted-space"> </span></b></span></h5>
+<h5 style="margin: 0.0px 0.0px 16.6px 0.0px; text-align: center; line-height: 14.0px; font: 10.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>总结回顾</b></span></h5>
+<p class="p1"><span class="s1">{% for p in player.in_all_rounds %} {% if p.interaction_number == player.interaction_number %} {% endif %} {% endfor %} {% endif %}</span></p>
+<table cellspacing="0" cellpadding="0">
+  <tbody>
     <tr>
-        <th></th>
-        <th style="text-align:center" colspan="5">You</th>
-        <th style="text-align:center" colspan="5">Other</th>
+      <td valign="middle" class="td1">
+        <p class="p4"><span class="s1"><br>
+</span></p>
+      </td>
+      <td colspan="5" valign="middle" class="td2">
+        <p class="p4"><span class="s1"><b>You</b></span></p>
+        <p class="p5"><span class="s1"><b>你</b></span></p>
+      </td>
+      <td colspan="5" valign="middle" class="td3">
+        <p class="p4"><span class="s1"><b>Other</b></span></p>
+        <p class="p5"><span class="s1"><b>对方</b></span></p>
+      </td>
     </tr>
     <tr>
-        <th>Round</th>
-        <th style="text-align:center">\(x_1\)</th>
-        <th style="text-align:center">\(y_1\)</th>
-        <th style="text-align:center">Kept</th>
-        <th style="text-align:center">Earnings</th>
-        <th style="text-align:center">Total Earnings</th>
-        <th style="text-align:center">\(x_2\)</th>
-        <th style="text-align:center">\(y_2\)</th>
-        <th style="text-align:center">Kept</th>
-        <th style="text-align:center">Earnings</th>
+      <td valign="middle" class="td1">
+        <p class="p4"><span class="s1"><b>Round</b></span></p>
+        <p class="p5"><span class="s1"><b>期数</b></span></p>
+      </td>
+      <td valign="middle" class="td4">
+        <p class="p4"><span class="s1"><b>\(x_1\)</b></span></p>
+      </td>
+      <td valign="middle" class="td4">
+        <p class="p4"><span class="s1"><b>\(y_1\)</b></span></p>
+      </td>
+      <td valign="middle" class="td4">
+        <p class="p4"><span class="s1"><b>Kept</b></span></p>
+        <p class="p5"><span class="s1"><b>个人留存</b></span></p>
+      </td>
+      <td valign="middle" class="td5">
+        <p class="p4"><span class="s1"><b>Earnings</b></span></p>
+        <p class="p5"><span class="s1"><b>个人收益</b></span></p>
+      </td>
+      <td valign="middle" class="td6">
+        <p class="p4"><span class="s1"><b>Total Earnings</b></span></p>
+        <p class="p5"><span class="s1"><b>双方合作总收益</b></span></p>
+      </td>
+      <td valign="middle" class="td7">
+        <p class="p4"><span class="s1"><b>\(x_2\)</b></span></p>
+      </td>
+      <td valign="middle" class="td7">
+        <p class="p4"><span class="s1"><b>\(y_2\)</b></span></p>
+      </td>
+      <td valign="middle" class="td7">
+        <p class="p4"><span class="s1"><b>Kept</b></span></p>
+        <p class="p5"><span class="s1"><b>个人留存</b></span></p>
+      </td>
+      <td valign="middle" class="td8">
+        <p class="p4"><span class="s1"><b>Earnings</b></span></p>
+        <p class="p5"><span class="s1"><b>个人收益</b></span></p>
+      </td>
     </tr>
-
-    {% for p in player.in_all_rounds %}
-    {% if p.interaction_number == player.interaction_number %}
     <tr>
-        <td>{{ p.round_in_interaction}}</td>
-        <td>{{ p.a1 }}</td>
-        <td>{{ p.a2 }}</td>
-        <td>{{ p.a3 }}</td>
-        <td>{{ p.payoff}}</td>
-        <td>{{ p.cum_payoff}}</td>
-        <td>{{ p.other_a1 }}</td>
-        <td>{{ p.other_a2 }}</td>
-        <td>{{ p.other_a3 }}</td>
-        <td>{{ p.other_payoff }}</td>
+      <td valign="middle" class="td1">
+        <p class="p4"><span class="s1">{{ p.round_in_interaction}}</span></p>
+      </td>
+      <td valign="middle" class="td4">
+        <p class="p4"><span class="s1">{{ p.a1 }}</span></p>
+      </td>
+      <td valign="middle" class="td4">
+        <p class="p4"><span class="s1">{{ p.a2 }}</span></p>
+      </td>
+      <td valign="middle" class="td4">
+        <p class="p4"><span class="s1">{{ p.a3 }}</span></p>
+      </td>
+      <td valign="middle" class="td5">
+        <p class="p4"><span class="s1">{{ p.payoff}}</span></p>
+      </td>
+      <td valign="middle" class="td6">
+        <p class="p4"><span class="s1">{{ p.cum_payoff}}</span></p>
+      </td>
+      <td valign="middle" class="td7">
+        <p class="p4"><span class="s1">{{ p.other_a1 }}</span></p>
+      </td>
+      <td valign="middle" class="td7">
+        <p class="p4"><span class="s1">{{ p.other_a2 }}</span></p>
+      </td>
+      <td valign="middle" class="td7">
+        <p class="p4"><span class="s1">{{ p.other_a3 }}</span></p>
+      </td>
+      <td valign="middle" class="td8">
+        <p class="p4"><span class="s1">{{ p.other_payoff }}</span></p>
+      </td>
     </tr>
-
-    {% endif %}
-    {% endfor %}
-    {% endif %}
+  </tbody>
 </table>
-<p>Note: if you do not submit your decision within the time limit, your earnings for that round is 0 point. </p>
-
+<p class="p6"><span class="s1">Note: if you do not submit your decision within the time limit, your earnings for that round is 0 point.<span class="Apple-converted-space"> </span></span></p>
+</body>
+</html>
