--- a/coopetition_mturk/templates/coopetition_mturk/InteractionResults.html
+++ b/coopetition_mturk/templates/coopetition_mturk/InteractionResults.html
@@ -1,35 +1,31 @@
-{% extends "global/Page.html" %}
-{% load staticfiles otree %}
-
-{% block title %}
-Results
-{% endblock %}
-
-
-{% block content %}
-
-<div style="text-align:center;font-size:16px">
-    <p>
-        <strong>
-            This is the end of this part of the experiment.
-        </strong>
-    </p>
-
-    <p>
-        <strong>
-            Your earnings for this part is {{ player.cum_payoff }}.
-        </strong>
-    </p>
-</div>
-
-
-<div style="text-align:right">
-    {% next_button %}
-</div>
-
-<hr>
-{% include Constants.historyall_template %}
-{% include Constants.historyall_previous_template %}
-
-
-{% endblock %}
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Style-Type" content="text/css">
+  <title></title>
+  <meta name="Generator" content="Cocoa HTML Writer">
+  <meta name="CocoaVersion" content="1504.83">
+  <style type="text/css">
+    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p2 {margin: 0.0px 0.0px 16.0px 0.0px; text-align: center; line-height: 18.0px; font: 16.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p3 {margin: 0.0px 0.0px 16.0px 0.0px; text-align: center; line-height: 22.0px; font: 16.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000}
+    p.p4 {margin: 0.0px 0.0px 16.0px 0.0px; text-align: center; line-height: 22.0px; font: 16.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: right; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p6 {margin: 0.0px 0.0px 6.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    span.s1 {font-kerning: none}
+    span.s2 {font: 16.0px 'Songti SC'; font-kerning: none}
+  </style>
+</head>
+<body>
+<p class="p1"><span class="s1">{% extends "global/Page.html" %} {% load staticfiles otree %} {% block title %} Results {% endblock %} {% block content %}</span></p>
+<p class="p2"><span class="s1"><b>This is the end of this part of the experiment.<span class="Apple-converted-space"> </span></b></span></p>
+<p class="p2"><span class="s1"><b>Your earnings for this part is {{ player.cum_payoff }}.<span class="Apple-converted-space"> </span></b></span></p>
+<p class="p3"><span class="s1"><b>本部分实验结束。</b></span></p>
+<p class="p4"><span class="s2"><b>你在这部分的收益为</b></span><span class="s1"><b>{{ player.cum_payoff }}</b></span><span class="s2"><b>。</b></span></p>
+<p class="p5"><span class="s1">{% next_button %}<span class="Apple-converted-space"> </span></span></p>
+<p class="p6"><span class="s1"><br>
+</span></p>
+<p class="p1"><span class="s1">{% include Constants.historyall_template %} {% include Constants.historyall_previous_template %} {% endblock %}<span class="Apple-converted-space"> </span></span></p>
+</body>
+</html>
