--- a/coopetition_mturk/templates/coopetition_mturk/Introduction.html
+++ b/coopetition_mturk/templates/coopetition_mturk/Introduction.html
@@ -1,124 +1,51 @@
-{% extends "global/Page.html" %}
-{% load staticfiles otree %}
-
-{% block title %}
-Introduction: Part 2
-{% endblock %}
-
-{% block content %}
-
-<p>
-    This is the start of Part 2 of the experiment.
-    There will be <strong>{{ Constants.interaction_length.1 }}</strong>   rounds of decision-making.
-    You will be matched with <strong>the same participant</strong> as in Part I.
-</p>
-<p>
-The situation in Part 2 is quite similar to Part 1. This part differs from Prat 1 only in that
-</p>
-
-    {% if player.condition == "Det" and player.A == 60 %}
-<p style="text-align:center">
-    <strong>the total return from the investment now is \(x_1x_2+60\),</strong> instead of \(x_1x_2\).
-</p>
-<p>
-    That is, the total return from the investment is 60 points more than before.
-</p>
-    {% endif %}
-    {% if player.condition == "Det" and player.A == 0 %}
-<p style="text-align:center">
-    <strong>the total return from the investment now is \(x_1x_2\),</strong> instead of \(x_1x_2+60\).
-</p>
-<p>
-    That is, the total return from the investment is 60 points less than before.
-</p>
-    {% endif %}
-
-   {% if player.condition == "Asm" and player.A == 60 %}
-<p style="text-align:center">
-    <strong>the total return from the investment now is \(\displaystyle\frac{x_1x_2}{2}+60\),</strong> instead of \(\displaystyle\frac{x_1x_2}{2}\).
-</p>
-<p>
-    That is, the total return from the investment is 60 points more than before.
-</p>
-    {% endif %}
-    {% if player.condition == "Asm" and player.A == 0 %}
-<p style="text-align:center">
-    <strong>the total return from the investment now is \(\displaystyle\frac{x_1x_2}{2}\),</strong> instead of \(\displaystyle\frac{x_1x_2}{2}+60\).
-</p>
-<p>
-    That is, the total return from the investment is 60 points less than before.
-</p>
-    {% endif %}
-
-
-
-    {% if player.condition == "Fix" and player.A == 60 %}
-<p style="text-align:center">
-    <strong>the total return from the investment now is
-        \(\overbrace{200}^{rand \le x_1x_2}+60\),
-        </strong> instead of
-    \(\overbrace{200}^{rand \le x_1x_2}\).
-</p>
-<p>
-    That is, the total return is \(2x_1x_2+60\) points if the investment is a success, and 60 points if the investment is a failure.
-</p>
-<p>
-    The total return from the investment is therefore 60 points more than before, whether the investment is a success or not.
-    {% endif %}
-
-    {% if player.condition == "Fix" and player.A == 0 %}
-<p style="text-align:center">
-    <strong>the total return from the investment now is
-        \(\overbrace{2x_1x_2}^{rand \le 100}\),
-    </strong> instead of
-    \(\overbrace{2x_1x_2}^{rand \le 100}+60\).
-</p>
-<p>
-    That is, the total return is \(2x_1x_2\) points if the investment is a success, and 0 point if the investment is a failure.
-</p>
-<p>
-    The total return from the investment is therefore 60 points less than before, whether the investment is a success or not.
-<p>
-    {% endif %}
-
-    {% if player.condition == "Var" and player.A == 60 %}
-
-<p style="text-align:center">
-    <strong>the total return from the investment now is
-        \(\overbrace{ {{Constants.var_max}} }^{rand \le x_1x_2}+60\),
-    </strong>
-    instead of
-    \(\overbrace{ {{ Constants.var_max }}}^{rand \le x_1x_2}\).
-</p>
-<p>
-    That is, the total return is 170 points if the investment is a success, and 60 points if the investment is a failure.
-</p>
-<p>
-    The total return from the investment is therefore 60 points more than before, whether the investment is a success or not.
-</p>
-    {% endif %}
-
-    {% if player.condition == "Var" and player.A == 0 %}
-<p style="text-align:center">
-    <strong>the total return from the investment now is
-        \(\overbrace{ {{Constants.var_max}} }^{rand \le x_1x_2}\),
-    </strong> instead of
-    \(\overbrace{ {{Constants.var_max}}}^{rand \le x_1x_2}+60\).
-</p>
-<p>
-    That is, the total return is {{Constants.var_max}} points if the investment is a success, and 0 point if the investment is a failure.
-</p>
-<p>
-    The total return from the investment is therefore 60 points less than before, whether the investment is a success or not.
-    {% endif %}
-</p>
-
-
-{% include Constants.instructions_template %}
-
-<br/>
-<div style="text-align:right">
-    {% next_button %}
-</div>
-
-{% endblock %}
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Style-Type" content="text/css">
+  <title></title>
+  <meta name="Generator" content="Cocoa HTML Writer">
+  <meta name="CocoaVersion" content="1504.83">
+  <style type="text/css">
+    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p2 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p3 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 14.0px; font: 12.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000}
+    p.p4 {margin: 0.0px 0.0px 12.0px 0.0px; text-align: center; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p5 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 14.0px; font: 12.0px 'Songti SC'; color: #000000}
+    p.p6 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: right; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    span.s1 {font-kerning: none}
+    span.s2 {font: 12.0px Times; font-kerning: none}
+    span.s3 {font: 12.0px 'Songti SC'; font-kerning: none}
+  </style>
+</head>
+<body>
+<p class="p1"><span class="s1">{% extends "global/Page.html" %} {% load staticfiles otree %} {% block title %} Introduction: Part 2 {% endblock %} {% block content %}</span></p>
+<p class="p2"><span class="s1">This is the start of Part 2 of the experiment. There will be <b>{{ Constants.interaction_length.1 }}</b> rounds of decision-making. You will be matched with <b>the same participant</b> as in Part I.<span class="Apple-converted-space"> </span></span></p>
+<p class="p3"><span class="s1">实验的第二部分现在开始。本部分共有</span><span class="s2"><b>{{ Constants.interaction_length.1 }}</b> </span><span class="s1">期决策。你匹配到的“对方”玩家与<b>第一部分相同</b>。</span></p>
+<p class="p2"><span class="s1">The situation in Part 2 is quite similar to Part 1. This part differs from Prat 1 only in that<span class="Apple-converted-space"> </span></span></p>
+<p class="p3"><span class="s1">本部分实验情境与第一部分相似，不同之处仅在于：</span></p>
+<p class="p1"><span class="s1">{% if player.condition == "Det" and player.A == 60 %}</span></p>
+<p class="p4"><span class="s1"><b>the total return from the investment now is \(x_1x_2+60\),</b> instead of \(x_1x_2\).<span class="Apple-converted-space"> </span></span></p>
+<p class="p4"><span class="s3"><b>合作总收益为</b></span><span class="s1"><b>\(x_1x_2+60\)</b></span><span class="s3"><b>，而非此前的</b></span><span class="s1">\(x_1x_2\)</span><span class="s3">。</span></p>
+<p class="p2"><span class="s1">That is, the total return from the investment is 60 points more than before.<span class="Apple-converted-space"> </span></span></p>
+<p class="p3"><span class="s1">也就是说，合作总收益较之前增加了</span><span class="s2">60</span><span class="s1">（份资源）。</span></p>
+<p class="p1"><span class="s1">{% endif %} {% if player.condition == "Det" and player.A == 0 %}</span></p>
+<p class="p4"><span class="s1"><b>the total return from the investment now is \(x_1x_2\),</b> instead of \(x_1x_2+60\).<span class="Apple-converted-space"> </span></span></p>
+<p class="p4"><span class="s3"><b>合作总收益为</b></span><span class="s1"><b>\(x_1x_2\)</b></span><span class="s3"><b>，而非此前的</b></span><span class="s1">\(x_1x_2+60\)</span></p>
+<p class="p2"><span class="s1">That is, the total return from the investment is 60 points less than before.<span class="Apple-converted-space"> </span></span></p>
+<p class="p3"><span class="s1">也就是说，合作总收益较之前减少了</span><span class="s2">60</span><span class="s1">（份资源）。</span></p>
+<p class="p1"><span class="s1">{% endif %} {% if player.condition == "Asm" and player.A == 60 %}</span></p>
+<p class="p4"><span class="s1"><b>the total return from the investment now is \(\displaystyle\frac{x_1x_2}{2}+60\),</b> instead of \(\displaystyle\frac{x_1x_2}{2}\).<span class="Apple-converted-space"> </span></span></p>
+<p class="p4"><span class="s3">合作总收益为</span><span class="s1"><b>\(\displaystyle\frac{x_1x_2}{2}+60\)</b></span><span class="s3"><b>，而非</b></span><span class="s1">\(\displaystyle\frac{x_1x_2}{2}\)</span><span class="s3">。</span></p>
+<p class="p2"><span class="s1">That is, the total return from the investment is 60 points more than before.<span class="Apple-converted-space"> </span></span></p>
+<p class="p3"><span class="s1">也就是说，合作总收益较之前增加了60（份资源）。</span></p>
+<p class="p1"><span class="s1">{% endif %} {% if player.condition == "Asm" and player.A == 0 %}</span></p>
+<p class="p4"><span class="s1"><b>the total return from the investment now is \(\displaystyle\frac{x_1x_2}{2}\),</b> instead of \(\displaystyle\frac{x_1x_2}{2}+60\).<span class="Apple-converted-space"> </span></span></p>
+<p class="p4"><span class="s3"><b>合作总收益为</b></span><span class="s1"><b>\(\displaystyle\frac{x_1x_2}{2}\)</b></span><span class="s3"><b>，而非</b></span><span class="s1">\(\displaystyle\frac{x_1x_2}{2}+60\)</span><span class="s3">。</span></p>
+<p class="p2"><span class="s1">That is, the total return from the investment is 60 points less than before.<span class="Apple-converted-space"> </span></span></p>
+<p class="p5"><span class="s1">也就是说，合作总收益较之前减少了</span><span class="s2">60</span><span class="s1">（份资源）。</span></p>
+<p class="p1"><span class="s1">{% endif %} {% include Constants.instructions_template %}<span class="Apple-converted-space"> </span></span></p>
+<p class="p6"><span class="s1">{% next_button %}<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1">{% endblock %}<span class="Apple-converted-space"> </span></span></p>
+</body>
+</html>
