--- a/coopetition_mturk/templates/coopetition_mturk/Results.html
+++ b/coopetition_mturk/templates/coopetition_mturk/Results.html
@@ -1,182 +1,209 @@
-{% extends "global/Page.html" %}
-{% load staticfiles otree %}
-
-{% block title %}
-Results
-{% endblock %}
-
-
-{% block content %}
-<p style="font-size:16px">Round {{ player.round_in_interaction }} </p>
-
-<h5 style="text-align:center">
-    Summary of this round
-</h5>
-
-{% if player.condition == "Asm" %}
-<div>
-    <table>
-        <tr>
-            <th></th>
-            <th>Investment Account</th><th>Rationing Account</th><th>Kept to self</th>
-            <th>Total Return</th><th>Share of Total Return</th><th>Final Earnings</th>
-        </tr>
-        <tr>
-            <th>You</th><td>\(x_1=\){{player.a1}}</td><td>\(y_1=\){{player.a2}}</td><td>{{player.a3}}</td>
-            {% if player.A == 60 %}
-            <td rowspan="2">\(\displaystyle\frac{x_1x_2}{2}+60={{player.pie}}\)</td>
-            {% else %}
-            <td rowspan="2">\(\displaystyle\frac{x_1x_2}{2}={{player.pie}}\)</td>
-            {% endif %}
-
-            <td>\(\displaystyle \frac{y_1}{y_1 + y_2} =\){{player.pie_share}}</td>
-            <td>{{player.pie_share}} \(\times\) {{player.pie}} + {{player.a3}}= {{player.potential_payoff}}</td>
-        </tr>
-        <tr>
-            <th>Other</th><td>\(x_2=\){{player.other_a1}}</td><td>\(y_2=\){{player.other_a2}}</td><td>{{player.other_a3}}</td>
-            <td>\(\displaystyle \frac{y_2}{y_1 + y_2} =\) {{player.other_share}}</td>
-            <td>{{player.other_share}} \(\times\) {{player.pie}} + {{player.other_a3}}= {{player.other_payoff}}</td>
-        </tr>
-    </table>
-</div>
-{% endif %}
-
-{% if player.condition == "Det" %}
-<div>
-    <table>
-        <tr>
-            <th></th>
-            <th>Investment Account</th><th>Rationing Account</th><th>Kept to self</th>
-            <th>Total Return</th><th>Share of Total Return</th><th>Final Earnings</th>
-        </tr>
-        <tr>
-            <th>You</th><td>\(x_1=\){{player.a1}}</td><td>\(y_1=\){{player.a2}}</td><td>{{player.a3}}</td>
-            {% if player.A == 60 %}
-            <td rowspan="2">\(x_1x_2+60={{player.pie}}\)</td>
-            {% else %}
-            <td rowspan="2">\(x_1x_2={{player.pie}}\)</td>
-            {% endif %}
-
-            <td>\(\displaystyle \frac{y_1}{y_1 + y_2} =\){{player.pie_share}}</td>
-            <td>{{player.pie_share}} \(\times\) {{player.pie}} + {{player.a3}}= {{player.potential_payoff}}</td>
-        </tr>
-        <tr>
-            <th>Other</th><td>\(x_2=\){{player.other_a1}}</td><td>\(y_2=\){{player.other_a2}}</td><td>{{player.other_a3}}</td>
-            <td>\(\displaystyle \frac{y_2}{y_1 + y_2} =\) {{player.other_share}}</td>
-            <td>{{player.other_share}} \(\times\) {{player.pie}} + {{player.other_a3}}= {{player.other_payoff}}</td>
-        </tr>
-    </table>
-</div>
-{% endif %}
-
-
-
-{% if player.condition == "Fix" %}
-<div>
-    <table>
-        <tr>
-            <th></th>
-            <th>Investment Account</th><th>Rationing Account</th> <th>Kept to self</th>
-            <th>Share of Total Return</th>
-            <th>Random number</th><th>Successful investment?</th>
-            <th>Total Return</th>
-            <th>Final Earnings</th>
-        </tr>
-        <tr>
-            <th>You</th><td>\(x_1=\){{player.a1}}</td><td>\(y_1=\){{player.a2}}</td><td>{{player.a3}}</td>
-            <td>\(\displaystyle\frac{y_1}{y_1 + y_2} =\){{player.pie_share}}</td>
-            <td rowspan="2">{{ player.rand_num}}</td>
-            {% if player.successful %}
-                <td rowspan="2">
-                    Yes <br/> ({{player.rand_num}} \(\le\)100)
-                </td>
-                <td rowspan="2">
-                    {% if player.A == 60 %} \(2x_1x_2 +60 = {{ player.pie }}\) {% else %} \(2x_1x_2 = {{ player.pie }}\) {% endif%}
-                </td>
-            {% else %}
-                <td rowspan="2">
-                    No <br/> ({{player.rand_num}} >100)
-                </td>
-                <td rowspan="2">
-                    {% if player.A == 60 %} \({{ player.pie }}\) {% else %} \({{ player.pie }}\) {% endif%}
-                </td>
-            {% endif%}
-            <td>{{ player.pie_share }} \(\times\) {{player.pie}} + {{player.a3}}= {{player.potential_payoff}}</td>
-        </tr>
-        <tr>
-            <th>Other</th><td>\(x_2=\){{player.other_a1}}</td><td>\(y_2=\){{player.other_a2}}</td><td>{{player.other_a3}}</td>
-            <td>\(\displaystyle\frac{y_2}{y_1 + y_2} =\){{player.other_share}}</td>
-            <td>{{player.other_share}} \(\times\) {{player.pie}} + {{player.other_a3}}= {{player.other_payoff}}</td>
-        </tr>
-    </table>
-</div>
-{% endif %}
-{% if player.condition == "Var" %}
-<div>
-    <table>
-        <tr>
-            <th></th>
-            <th>Investment Account</th><th>Rationing Account</th> <th>Kept to self</th>
-            <th>Share of Total Return</th>
-            <th>Random number</th>
-            <th>Successful investment?</th>
-            <th>Total Return</th>
-            <th>Final Earnings</th>
-        </tr>
-        <tr>
-            <th>You</th><td>\(x_1=\){{player.a1}}</td><td>\(y_1=\){{player.a2}}</td><td>{{player.a3}}</td>
-            <td>\(\displaystyle\frac{y_1}{y_1 + y_2} =\){{player.pie_share}}</td>
-            <td rowspan="2">{{ player.rand_num}}</td>
-            <td rowspan="2">
-                {% if player.successful %}
-                Yes <br/> ( \(x_1x_2 \ge\) {{player.rand_num}})
-                {% else %}
-                No <br/> (\(x_1x_2 <\) {{player.rand_num}} )
-                {% endif%}
-            </td>
-            <td rowspan="2"> {{ player.pie}}</td>
-            <td>{{player.pie_share}} \(\times\) {{player.pie}} + {{player.a3}}= {{player.potential_payoff}}</td>
-        </tr>
-        <tr>
-            <th>Other</th><td>\(x_2=\){{player.other_a1}}</td><td>\(y_2=\){{player.other_a2}}</td><td>{{player.other_a3}}</td>
-            <td>\(\displaystyle\frac{y_2}{y_1 + y_2} =\){{player.other_share}}</td>
-            <td>{{player.other_share}} \(\times\) {{player.pie}} + {{player.other_a3}}= {{player.other_payoff}}</td>
-        </tr>
-    </table>
-
-    <br/>
-    {% if not player.successful and player.rand_num <= 100 %}
-    <p>
-        With the random number greater than \(x_1x_2 \), the investment is not successful. Note that if you and the other
-        participant increase the points in the <i>Investment Account</i>, the investment could have been successful
-        (if \(x_1x_2 \ge {{player.rand_num}}\)).
-    </p>
-    {% endif %}
-
-</div>
-{% endif %}
-
-<br/>
-{% if player.timed_out %}
-Because you did not submit your decision within the time limit, the computer has made a choice for you. Therefore,
-<strong> instead of the points calculated above, you receive 0 point for this round.</strong>
-Please submit your decision before time runs out in each round in order to receive your earnings.
-{% endif %}
-<br/>
-<div style="text-align:right">
-    {% next_button %}
-</div>
-
-
-<div class="card bg-light instructions">
-    <div class="card-body">
-        {% include Constants.breakdowns_template %}
-    </div>
-</div>
-
-<br/>
-{% include Constants.historyall_template %}
-<br/>
-{% include Constants.historyall_previous_template %}
-
-{% endblock %}
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Style-Type" content="text/css">
+  <title></title>
+  <meta name="Generator" content="Cocoa HTML Writer">
+  <meta name="CocoaVersion" content="1504.83">
+  <style type="text/css">
+    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p2 {margin: 0.0px 0.0px 16.0px 0.0px; line-height: 18.0px; font: 16.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000; min-height: 14.0px}
+    p.p6 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p7 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 14.0px; font: 12.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000}
+    p.p8 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: right; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p9 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000; min-height: 14.0px}
+    span.s1 {font-kerning: none}
+    span.s2 {font: 16.0px 'Songti SC'; font-kerning: none}
+    span.s3 {font: 10.0px Times; font-kerning: none}
+    td.td1 {width: 30.7px; margin: 0.5px 0.5px 0.5px 0.5px; padding: 1.0px 1.0px 1.0px 1.0px}
+    td.td2 {width: 97.4px; margin: 0.5px 0.5px 0.5px 0.5px; padding: 1.0px 1.0px 1.0px 1.0px}
+    td.td3 {width: 134.2px; margin: 0.5px 0.5px 0.5px 0.5px; padding: 1.0px 1.0px 1.0px 1.0px}
+    td.td4 {width: 111.3px; margin: 0.5px 0.5px 0.5px 0.5px; padding: 1.0px 1.0px 1.0px 1.0px}
+    td.td5 {width: 134.5px; margin: 0.5px 0.5px 0.5px 0.5px; padding: 1.0px 1.0px 1.0px 1.0px}
+    td.td6 {width: 77.4px; margin: 0.5px 0.5px 0.5px 0.5px; padding: 1.0px 1.0px 1.0px 1.0px}
+    td.td7 {width: 161.2px; margin: 0.5px 0.5px 0.5px 0.5px; padding: 1.0px 1.0px 1.0px 1.0px}
+  </style>
+</head>
+<body>
+<p class="p1"><span class="s1">{% extends "global/Page.html" %} {% load staticfiles otree %} {% block title %} Results {% endblock %} {% block content %}</span></p>
+<p class="p2"><span class="s1">Round {{ player.round_in_interaction }}<span class="Apple-converted-space"> </span></span></p>
+<p class="p2"><span class="s2">第</span><span class="s1">{{ player.round_in_interaction }} </span><span class="s2">期</span></p>
+<h5 style="margin: 0.0px 0.0px 16.6px 0.0px; text-align: center; line-height: 13.0px; font: 10.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>Summary of this round<span class="Apple-converted-space"> </span></b></span></h5>
+<h5 style="margin: 0.0px 0.0px 16.6px 0.0px; text-align: center; line-height: 13.0px; font: 10.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>本期总结</b></span><span class="s3"><b> <span class="Apple-converted-space"> </span></b></span></h5>
+<p class="p1"><span class="s1">{% if player.condition == "Asm" %}</span></p>
+<p class="p1"><span class="s1">{% if player.A == 60 %} {% else %} {% endif %}</span></p>
+<table cellspacing="0" cellpadding="0">
+  <tbody>
+    <tr>
+      <td valign="middle" class="td1">
+        <p class="p5"><span class="s1"><b></b></span><br></p>
+      </td>
+      <td valign="middle" class="td2">
+        <p class="p6"><span class="s1"><b>Investment Account</b></span></p>
+        <p class="p7"><span class="s1"><b>投资账户</b></span></p>
+      </td>
+      <td valign="middle" class="td2">
+        <p class="p6"><span class="s1"><b>Rationing Account</b></span></p>
+        <p class="p7"><span class="s1"><b>分配账户</b></span></p>
+      </td>
+      <td valign="middle" class="td2">
+        <p class="p6"><span class="s1"><b>Kept to self</b></span></p>
+        <p class="p7"><span class="s1"><b>个人留存</b></span></p>
+      </td>
+      <td valign="middle" class="td3">
+        <p class="p6"><span class="s1"><b>Total Return</b></span></p>
+        <p class="p7"><span class="s1"><b>合作总收益</b></span></p>
+      </td>
+      <td valign="middle" class="td3">
+        <p class="p6"><span class="s1"><b>Share of Total Return</b></span></p>
+        <p class="p7"><span class="s1"><b>总收益中的个人份额</b></span></p>
+      </td>
+      <td valign="middle" class="td4">
+        <p class="p6"><span class="s1"><b>Final Earnings</b></span></p>
+        <p class="p7"><span class="s1"><b>最终收益</b></span></p>
+      </td>
+    </tr>
+    <tr>
+      <td valign="middle" class="td1">
+        <p class="p6"><span class="s1"><b>You</b></span></p>
+        <p class="p7"><span class="s1"><b>你</b></span></p>
+      </td>
+      <td valign="middle" class="td2">
+        <p class="p1"><span class="s1">\(x_1=\){{player.a1}}</span></p>
+      </td>
+      <td valign="middle" class="td2">
+        <p class="p1"><span class="s1">\(y_1=\){{player.a2}}</span></p>
+      </td>
+      <td valign="middle" class="td2">
+        <p class="p1"><span class="s1">{{player.a3}}</span></p>
+      </td>
+      <td rowspan="2" valign="middle" class="td3">
+        <p class="p1"><span class="s1">\(\displaystyle\frac{x_1x_2}{2}+60={{player.pie}}\)</span></p>
+      </td>
+      <td rowspan="2" valign="middle" class="td3">
+        <p class="p1"><span class="s1">\(\displaystyle\frac{x_1x_2}{2}={{player.pie}}\)</span></p>
+      </td>
+      <td valign="middle" class="td4">
+        <p class="p1"><span class="s1">\(\displaystyle \frac{y_1}{y_1 + y_2} =\){{player.pie_share}}</span></p>
+      </td>
+      <td valign="middle" class="td5">
+        <p class="p1"><span class="s1">{{player.pie_share}} \(\times\) {{player.pie}} + {{player.a3}}= {{player.potential_payoff}}</span></p>
+      </td>
+    </tr>
+    <tr>
+      <td valign="middle" class="td1">
+        <p class="p6"><span class="s1"><b>Other</b></span></p>
+        <p class="p7"><span class="s1"><b>对方</b></span></p>
+      </td>
+      <td valign="middle" class="td2">
+        <p class="p1"><span class="s1">\(x_2=\){{player.other_a1}}</span></p>
+      </td>
+      <td valign="middle" class="td2">
+        <p class="p1"><span class="s1">\(y_2=\){{player.other_a2}}</span></p>
+      </td>
+      <td valign="middle" class="td2">
+        <p class="p1"><span class="s1">{{player.other_a3}}</span></p>
+      </td>
+      <td valign="middle" class="td4">
+        <p class="p1"><span class="s1">\(\displaystyle \frac{y_2}{y_1 + y_2} =\) {{player.other_share}}</span></p>
+      </td>
+      <td valign="middle" class="td5">
+        <p class="p1"><span class="s1">{{player.other_share}} \(\times\) {{player.pie}} + {{player.other_a3}}= {{player.other_payoff}}</span></p>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<p class="p1"><span class="s1">{% endif %} {% if player.condition == "Det" %}</span></p>
+<p class="p1"><span class="s1">{% if player.A == 60 %} {% else %} {% endif %}</span></p>
+<table cellspacing="0" cellpadding="0">
+  <tbody>
+    <tr>
+      <td valign="middle" class="td1">
+        <p class="p5"><span class="s1"><b></b></span><br></p>
+      </td>
+      <td valign="middle" class="td2">
+        <p class="p6"><span class="s1"><b>Investment Account</b></span></p>
+        <p class="p7"><span class="s1"><b>投资账户</b></span></p>
+      </td>
+      <td valign="middle" class="td2">
+        <p class="p6"><span class="s1"><b>Rationing Account</b></span></p>
+        <p class="p7"><span class="s1"><b>分配账户</b></span></p>
+      </td>
+      <td valign="middle" class="td2">
+        <p class="p6"><span class="s1"><b>Kept to self</b></span></p>
+        <p class="p7"><span class="s1"><b>个人留存</b></span></p>
+      </td>
+      <td valign="middle" class="td6">
+        <p class="p6"><span class="s1"><b>Total Return</b></span></p>
+        <p class="p7"><span class="s1"><b>合作总收益</b></span></p>
+      </td>
+      <td valign="middle" class="td6">
+        <p class="p6"><span class="s1"><b>Share of Total Return</b></span></p>
+        <p class="p7"><span class="s1"><b>总收益中的个人份额</b></span></p>
+      </td>
+      <td valign="middle" class="td4">
+        <p class="p6"><span class="s1"><b>Final Earnings</b></span></p>
+        <p class="p7"><span class="s1"><b>最终收益</b></span></p>
+      </td>
+    </tr>
+    <tr>
+      <td valign="middle" class="td1">
+        <p class="p6"><span class="s1"><b>You</b></span></p>
+        <p class="p7"><span class="s1"><b>你</b></span></p>
+      </td>
+      <td valign="middle" class="td2">
+        <p class="p1"><span class="s1">\(x_1=\){{player.a1}}</span></p>
+      </td>
+      <td valign="middle" class="td2">
+        <p class="p1"><span class="s1">\(y_1=\){{player.a2}}</span></p>
+      </td>
+      <td valign="middle" class="td2">
+        <p class="p1"><span class="s1">{{player.a3}}</span></p>
+      </td>
+      <td rowspan="2" valign="middle" class="td6">
+        <p class="p1"><span class="s1">\(x_1x_2+60={{player.pie}}\)</span></p>
+      </td>
+      <td rowspan="2" valign="middle" class="td6">
+        <p class="p1"><span class="s1">\(x_1x_2={{player.pie}}\)</span></p>
+      </td>
+      <td valign="middle" class="td4">
+        <p class="p1"><span class="s1">\(\displaystyle \frac{y_1}{y_1 + y_2} =\){{player.pie_share}}</span></p>
+      </td>
+      <td valign="middle" class="td7">
+        <p class="p1"><span class="s1">{{player.pie_share}} \(\times\) {{player.pie}} + {{player.a3}}= {{player.potential_payoff}}</span></p>
+      </td>
+    </tr>
+    <tr>
+      <td valign="middle" class="td1">
+        <p class="p6"><span class="s1"><b>Other</b></span></p>
+        <p class="p7"><span class="s1"><b>对方</b></span></p>
+      </td>
+      <td valign="middle" class="td2">
+        <p class="p1"><span class="s1">\(x_2=\){{player.other_a1}}</span></p>
+      </td>
+      <td valign="middle" class="td2">
+        <p class="p1"><span class="s1">\(y_2=\){{player.other_a2}}</span></p>
+      </td>
+      <td valign="middle" class="td2">
+        <p class="p1"><span class="s1">{{player.other_a3}}</span></p>
+      </td>
+      <td valign="middle" class="td4">
+        <p class="p1"><span class="s1">\(\displaystyle \frac{y_2}{y_1 + y_2} =\) {{player.other_share}}</span></p>
+      </td>
+      <td valign="middle" class="td7">
+        <p class="p1"><span class="s1">{{player.other_share}} \(\times\) {{player.pie}} + {{player.other_a3}}= {{player.other_payoff}}</span></p>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<p class="p1"><span class="s1">{% endif %}<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1">{% if player.timed_out %} Because you did not submit your decision within the time limit, the computer has made a choice for you. Therefore, <b>instead of the points calculated above, you receive 0 point for this round.</b> Please submit your decision before time runs out in each round in order to receive your earnings. {% endif %}<span class="Apple-converted-space"> </span></span></p>
+<p class="p8"><span class="s1">{% next_button %}<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1">{% include Constants.breakdowns_template %}<span class="Apple-converted-space"> </span></span></p>
+<p class="p9"><span class="s1"></span><br></p>
+<p class="p1"><span class="s1">{% include Constants.historyall_template %}<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1">{% include Constants.historyall_previous_template %} {% endblock %}<span class="Apple-converted-space"> </span></span></p>
+</body>
+</html>
